--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mailjet",
+  "name": "api/mailjet",
   "type": "typo3-cms-extension",
   "version": "1.0.0",
   "description": "Mailjet integration to let users subscribe to a specific list.",
@@ -20,13 +20,13 @@
     "GPL-2.0+"
   ],
   "require": {
-    "typo3/cms-core": ">=7.6.0,<8.3"
+    "typo3/cms-core": "^8.7 || ^9.5"
   },
   "suggest": {
     "typo3-ter/typoscript-rendering": "~1.0"
   },
   "require-dev": {
-    "php": ">=5.6.0",
+    "php": ">=7.2.0",
     "phpunit/phpunit": "~5.3.0"
   },
   "autoload": {
@@ -35,7 +35,7 @@
     }
   },
   "replace": {
-    "mailjet": "self.version",
+    "api/mailjet": "self.version",
     "typo3-ter/mailjet": "self.version"
   },
   "config": {
