--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "GPL-2.0+"
   ],
   "require": {
-    "typo3/cms-core": "~7|~8|~9|~10"
+    "typo3/cms-core": "~7|~8|~9|~10|~12"
   },
   "suggest": {
     "typo3-ter/typoscript-rendering": "~1.0"
