--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "GPL-2.0+"
   ],
   "require": {
-    "typo3/cms-core": "~7 | ~8 | ~9 | ~10 || ^12.4"
+    "typo3/cms-core": "~7|~8|~9|~10|~12"
   },
   "suggest": {
     "typo3-ter/typoscript-rendering": "~1.0"
@@ -28,12 +28,6 @@
   "require-dev": {
     "php": ">=5.6.0",
     "phpunit/phpunit": "~5.3.0"
-  },
-  "config": {
-    "allow-plugins": {
-      "typo3/cms-composer-installers": true,
-      "typo3/class-alias-loader": true
-    },
   },
   "autoload": {
     "psr-4": {
