--- a/composer.json
+++ b/composer.json
@@ -50,11 +50,12 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0.0"
+      "dev-master": "2.0.0"
     },
     "typo3/cms": {
       "cms-package-dir": "{$vendor-dir}/typo3/cms",
-      "web-dir": ".Build/Web"
+      "web-dir": ".Build/Web",
+      "extension-key": "mailjet"
     }
   }
 }
